--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -6,8 +6,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
   </head>
+  <style>
+    body {
+      text-align: center;
+      display: flex;
+      align-content: center;
+      justify-content: center;
+      background-color: #f7f4c8;
+      position: relative;
+    }
+
+    #app {
+      position: absolute;
+      width: 280px;
+      height: 48px;
+      top: 0;
+      left: 20px;
+      color: rgb(23, 183, 69);
+      font-weight: 700;
+      font-size: 56px;
+      margin-top: 150px;
+    }
+
+    .suika {
+      position: absolute;
+      left: 30px;
+      top: 320px;
+    }
+    .peach {
+      position: absolute;
+      bottom: 30px;
+      right: 30px;
+    }
+  </style>
   <body>
-    <div id="app"></div>
+    <div id="app">Suika Game</div>
+    <img class="suika" src="/public/fruits/10_watermelon.png" alt="" />
+    <img class="peach" src="/public/fruits/07_peach.png" alt="" />
     <script type="module" src="/main.js"></script>
   </body>
 </html>
