--- a/index.html
+++ b/index.html
@@ -33,6 +33,16 @@
       left: 30px;
       top: 320px;
     }
+    .grape {
+      position: absolute;
+      bottom: 390px;
+      right: 100px;
+    }
+    .berry {
+      position: absolute;
+      bottom: 250px;
+      right: 230px;
+    }
     .peach {
       position: absolute;
       bottom: 30px;
@@ -42,6 +52,8 @@
   <body>
     <div id="app">Suika Game</div>
     <img class="suika" src="/public/fruits/10_watermelon.png" alt="" />
+    <img class="grape" src="/public/fruits/02_grape.png" alt="" />
+    <img class="berry" src="/public/fruits/01_strawberry.png" alt="" />
     <img class="peach" src="/public/fruits/07_peach.png" alt="" />
     <script type="module" src="/main.js"></script>
   </body>
